fix: alignment navlinks in mobile menu

--- a/src/styles/components/Navbar.module.css
+++ b/src/styles/components/Navbar.module.css
@@ -27,7 +27,7 @@
   display: inline-block;
 }
 
-.navItem::after {
+.navItems .navItem::after {
   content: '';
   height: 2px;
   width: calc(100% - 2rem);
@@ -41,7 +41,7 @@
   transition: transform 0.4s cubic-bezier(0.25, 1, 0.5, 1);
 }
 
-.navItem:hover::after {
+.navItems .navItem:hover::after {
   transform: scaleX(1);
 }
 
@@ -65,11 +65,9 @@
   left: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
   z-index: 1000;
   clip-path: inset(0 0 100% 0);
   transition: clip-path 0.8s cubic-bezier(0.25, 1, 0.5, 1);
@@ -147,6 +145,7 @@
   font-weight: 400;
   transition: color 0.3s ease-in-out;
   opacity: 0;
+  margin: 0;
   transform: translateY(20px);
   transition: opacity 0.6s ease, transform 0.6s ease;
 }
